# cmake-externals-demo

./: .gitignore  CMakeLists.txt  README.md  clean.sh  cleanall.sh  exdemo-run.sh  install.sh
src/: exdemo.cpp
